# psp5d

./: Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml
crates/psp5d_cli/: Cargo.toml
crates/psp5d_cli/src/: main.rs
crates/psp5d_core/: Cargo.toml
crates/psp5d_core/src/: audit.rs  digest.rs  lib.rs  operator_registry.rs  replay.rs  state.rs  tie_break.rs  types.rs
crates/psp5d_core/tests/: test_digest_stability.rs  test_golden_trace_replay.rs  test_schema_validation.rs  test_sigma_init.rs
crates/psp5d_layer_triton/src/: lib.rs  operators_triton.rs  solve_coagula_gate.rs
crates/psp5d_layer_triton/tests/: test_gate_evidence_replay_stable.rs  test_spiral_determinism.rs
crates/psp5d_model_psp5d/: Cargo.toml
crates/psp5d_model_psp5d/src/: cube.rs  hdag.rs  lib.rs  observer_r5.rs
crates/psp5d_model_psp5d/src/frontends/: python_ts.rs
crates/psp5d_model_psp5d/tests/: test_frontend_generic_text.rs
examples/golden_trace/: rd.json
examples/golden_trace/expected/: trace.jsonl
examples/golden_trace/input/: input.txt
examples/input_small/: text_sample.txt  uir_sample.json
psp5d_engine/: README.md
psp5d_engine/.github/workflows/: ci.yml
psp5d_engine/crates/psp5d_cli/src/: main.rs
psp5d_engine/crates/psp5d_cli/tests/: test_cli_exit_codes.rs
psp5d_engine/crates/psp5d_core/src/: canon_jcs.rs  engine.rs  errors.rs  evidence.rs  manifest.rs  operators.rs  program.rs  rd.rs  schema_validate.rs  trace.rs  uir.rs
psp5d_engine/crates/psp5d_core/tests/: test_canon_idempotence.rs  test_deterministic_ties.rs  test_replay_first_divergence.rs
psp5d_engine/crates/psp5d_layer_triton/: Cargo.toml
psp5d_engine/crates/psp5d_layer_triton/src/: operators_triton.rs  spectral.rs  spiral.rs  tic_crystallize.rs
psp5d_engine/crates/psp5d_layer_triton/tests/: test_tic_crystallization_deterministic.rs
psp5d_engine/crates/psp5d_model_psp5d/: Cargo.toml
psp5d_engine/crates/psp5d_model_psp5d/src/: block.rs  gates_r5.rs  lib.rs  projection_pi.rs  resonant_kernel.rs  time_trimoebius.rs
psp5d_engine/crates/psp5d_model_psp5d/tests/: test_block_digest_stability.rs  (+5 more)
psp5d_engine/spec/schemas/: block.schema.json  evidence.schema.json  manifest.schema.json  operator_registry.schema.json  rd.schema.json  state.schema.json  trace.schema.json  triton_profile.schema.json  uir.schema.json
spec/: SPEC_PSP5D_ENGINE_v1_1.md
spec/schemas/: triton_gate_evidence.schema.json
(+6 files in other folders)
